# QChicken

./: .gitignore  CMakeLists.txt  Doxyfile.txt  QChicken.pro  QChicken_pt_BR.ts  README.md  _contabilidade__global_8h.html  _contabilidade__global_8h__dep__incl.md5  _q_chicken_2_teste-_b_d_d_2suite___b_d_d_test_2shared_2scripts_2bdd__hooks_8py.html  _q_chicken_2_teste-_b_d_d_2suite___b_d_d_test_2shared_2scripts_2bdd__hooks_8py_source.html  _q_chicken_2_teste-_b_d_d_2suite___b_d_d_test_2shared_2scripts_2names_8py.html  _q_chicken_2_teste-_b_d_d_2suite___b_d_d_test_2shared_2scripts_2names_8py_source.html  _q_chicken_2_teste-_b_d_d_2suite___b_d_d_test_2shared_2steps_2steps_8py.html  _q_chicken_2_teste-_b_d_d_2suite___b_d_d_test_2shared_2steps_2steps_8py_source.html  _q_chicken_2_teste-_b_d_d_2suite___b_d_d_test_2tst__case1_2test_8py.html  _q_chicken_2_teste-_b_d_d_2suite___b_d_d_test_2tst__case1_2test_8py_source.html  _q_chicken_2_teste-_b_d_d_2suite___b_d_d_test_2tst__case_2test_8py.html  _q_chicken_2_teste-_b_d_d_2suite___b_d_d_test_2tst__case_2test_8py_source.html  _r_e_a_d_m_e_8md.html  _register__global_8h.html  _register__global_8h__dep__incl.map  _register__global_8h__dep__incl.md5  _register__global_8h__incl.map  _register__global_8h__incl.md5  _register__global_8h_source.html  adminpanel_8cpp.html  adminpanel_8cpp__incl.map  adminpanel_8cpp__incl.md5  adminpanel_8cpp_source.html  adminpanel_8h.html  adminpanel_8h__dep__incl.map  adminpanel_8h__dep__incl.md5  adminpanel_8h__incl.map  adminpanel_8h__incl.md5  adminpanel_8h_source.html  annotated.html  authentication_8cpp.html  authentication_8cpp__incl.map  authentication_8cpp__incl.md5  authentication_8cpp_source.html  (+586 more)
API/: API.pro
QChickenMain/: QChickenMain.pro  adminpanel.cpp  adminpanel.h  adminpanel.ui  connection.h  dialogadduser.cpp  dialogadduser.h  dialogadduser.ui  loginwindow.cpp  loginwindow.h  loginwindow.ui  main.cpp  qchickenmain.cpp  qchickenmain.h  qchickenmain.ui  registerwindow.cpp  registerwindow.h  registerwindow.ui  relatoriowindow.cpp  relatoriowindow.h  relatoriowindow.ui
html/: _contabilidade__global_8h__dep__incl.map  _contabilidade__global_8h_source.html  annotated.html  bdd__hooks_8py.html  bdd__hooks_8py_source.html  class_contabilidade__coll__graph.map  class_contabilidade__inherit__graph.map  class_contabilidade__inherit__graph.md5  class_contabilidade_impl-members.html  class_contabilidade_impl.html  class_contabilidade_impl_a16ab0894770998160c3f2145cf1886f3_cgraph.map  class_contabilidade_impl_a19858020170ca448f3a63b4db41f3e70_cgraph.map  class_contabilidade_impl_a19858020170ca448f3a63b4db41f3e70_cgraph.md5  class_contabilidade_impl_a78e62505d968b4db112363bae49edb86_cgraph.md5  class_contabilidade_impl_a86bc80f18786259402ca138acab8b50f_icgraph.map  class_finance-members.html  class_finance.html  class_finance__coll__graph.map  class_finance__inherit__graph.map  class_finance_a5b7e66b2d34e23fea532e270d7fcf22b_icgraph.map  class_finance_a5b7e66b2d34e23fea532e270d7fcf22b_icgraph.md5  class_finance_afcc965c1f64eed2f26ae8823642d4b4a_icgraph.md5  class_finance_impl-members.html  class_finance_impl_a2e94a1c51b16ff426a39cad38f52e70d_cgraph.map  class_finance_impl_a2e94a1c51b16ff426a39cad38f52e70d_cgraph.md5  class_finance_impl_a477749e555d4bf4e8da2b46140bf031b_cgraph.map  class_finance_impl_a477749e555d4bf4e8da2b46140bf031b_cgraph.md5  class_finance_impl_aec759d97f370f477d1c43265cfcc0e52_icgraph.map  class_finance_impl_aef65e1674d91fb3d5372e23c55b12378_icgraph.md5  class_q_chicken_main-members.html  class_q_chicken_main.html  class_q_chicken_main__inherit__graph.md5  class_q_chicken_main_a81f91c6f9e31a2da7a20e8f94d6db03f_cgraph.map  class_q_chicken_main_a81f91c6f9e31a2da7a20e8f94d6db03f_cgraph.md5  class_q_chicken_main_add4f70b9579a2eee5211bc13d4f32b5d_icgraph.md5  class_relatorio_window.html  classes.html  contabilidade_8h__dep__incl.map  (+90 more)
src/api/: CMakeLists.txt  Contabilidade.cpp  Contabilidade.h
src/api/tests/: tests.pro  tst_tests01.cpp
src/api/unit_tests/: testcontabilidade.cpp  testcontabilidade.h
src/app/: CMakeLists.txt  QChicken_pt_BR.ts  main.cpp  qchickenmain.cpp  qchickenmain.h  qchickenmain.ui
(+214 files in other folders)
